@@ -18,7 +18,6 @@
 
 package com.publicissapient.kpidashboard.apis.jira.scrum.service;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -32,6 +31,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.jira.service.JiraKPIService;
+import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.tuple.Pair;
@@ -42,15 +43,11 @@ import org.springframework.stereotype.Component;
 
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
-import com.publicissapient.kpidashboard.apis.enums.JiraFeature;
 import com.publicissapient.kpidashboard.apis.enums.JiraFeatureHistory;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
 import com.publicissapient.kpidashboard.apis.errors.ApplicationException;
-import com.publicissapient.kpidashboard.apis.jira.service.backlogdashboard.JiraBacklogKPIService;
-import com.publicissapient.kpidashboard.apis.model.IterationKpiFilters;
-import com.publicissapient.kpidashboard.apis.model.IterationKpiFiltersOptions;
 import com.publicissapient.kpidashboard.apis.model.KPIExcelData;
 import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
@@ -68,8 +65,11 @@ import com.publicissapient.kpidashboard.common.model.application.DataCountGroup;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueCustomHistoryRepository;
+import com.publicissapient.kpidashboard.common.util.DateUtil;
 
 import lombok.extern.slf4j.Slf4j;
+
+import static com.publicissapient.kpidashboard.common.constant.CommonConstant.HIERARCHY_LEVEL_ID_PROJECT;
 
 /**
  * lead time kpi is a line graph to depict the lead time of issues in past 6
@@ -77,12 +77,11 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Component
 @Slf4j
-public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object>> {
+public class LeadTimeServiceImpl extends JiraKPIService<Double, List<Object>, Map<String, Object>> {
 	public static final String ISSUES = "issues";
-	private static final String STORY_HISTORY_DATA = "storyHistoryData";
 	private static final String ISSUE_COUNT = "Issue Count";
 	private static final String LEAD_TIME = "LEAD TIME";
-	private static final String SEARCH_BY_ISSUE_TYPE = "Filter by issue type";
+
 	@Autowired
 	private JiraIssueCustomHistoryRepository jiraIssueCustomHistoryRepository;
 	@Autowired
@@ -96,16 +95,18 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 	}
 
 	@Override
-	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, Node projectNode)
-			throws ApplicationException {
+	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement,
+			TreeAggregatorDetail treeAggregatorDetail) throws ApplicationException {
 
 		log.info("LEAD-TIME -> requestTrackerId[{}]", kpiRequest.getRequestTrackerId());
-		Map<String, Node> mapTmp = new HashMap<>();
-		mapTmp.put(projectNode.getId(), projectNode);
-		projectWiseLeafNodeValue(kpiElement, mapTmp, projectNode, kpiRequest);
+		List<Node> projectList = treeAggregatorDetail.getMapOfListOfProjectNodes().get(HIERARCHY_LEVEL_ID_PROJECT);
+		Map<String, Node> mapTmp = treeAggregatorDetail.getMapTmp();
+
+		// in case if only projects or sprint filters are applied
+		projectWiseLeafNodeValue(kpiElement, mapTmp, projectList, kpiRequest);
 
 		Map<Pair<String, String>, Node> nodeWiseKPIValue = new HashMap<>();
-		calculateAggregatedValueMap(projectNode, nodeWiseKPIValue, KPICode.LEAD_TIME);
+		calculateAggregatedValueMap(treeAggregatorDetail.getRoot(), nodeWiseKPIValue, KPICode.LEAD_TIME);
 		Map<String, List<DataCount>> trendValuesMap = getTrendValuesMap(kpiRequest, kpiElement, nodeWiseKPIValue,
 				KPICode.LEAD_TIME);
 
@@ -128,80 +129,82 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 		kpiElement.setTrendValueList(dataCountGroups);
 		kpiElement.setNodeWiseKPIValue(nodeWiseKPIValue);
 
-		log.debug("[LEAD-TIME-LEAF-NODE-VALUE][{}]. Values of leaf node after KPI calculation {}",
-				kpiRequest.getRequestTrackerId(), projectNode);
 		return kpiElement;
 	}
 
 	@SuppressWarnings("unchecked")
-	private void projectWiseLeafNodeValue(KpiElement kpiElement, Map<String, Node> mapTmp, Node leafNode,
+	private void projectWiseLeafNodeValue(KpiElement kpiElement, Map<String, Node> mapTmp, List<Node> leafNodeList,
 			KpiRequest kpiRequest) {
 
 		List<KPIExcelData> excelData = new ArrayList<>();
 		Set<String> issueTypesSet = new LinkedHashSet<>();
 		List<String> rangeList = customApiConfig.getLeadTimeRange();
-		Map<String, Object> resultMap = fetchKPIDataFromDb(leafNode, LocalDate.now().minusMonths(6).toString(),
-				LocalDate.now().toString(), kpiRequest);
-		List<JiraIssueCustomHistory> ticketList = (List<JiraIssueCustomHistory>) resultMap.get(STORY_HISTORY_DATA);
-
-		Map<String, List<JiraIssueCustomHistory>> projectWiseJiraIssue = ticketList.stream()
-				.collect(Collectors.groupingBy(JiraIssueCustomHistory::getBasicProjectConfigId));
-
-		List<JiraIssueCustomHistory> issueCustomHistoryList = projectWiseJiraIssue
-				.get(leafNode.getProjectFilter().getBasicProjectConfigId().toString());
-
-		FieldMapping fieldMapping = configHelperService.getFieldMappingMap()
-				.get(leafNode.getProjectFilter().getBasicProjectConfigId());
-		issueTypesSet.add(CommonConstant.OVERALL);
 		List<CycleTimeValidationData> cycleTimeList = new ArrayList<>();
-		LinkedHashMap<String, List<DataCount>> leadTime = getLeadTime(issueCustomHistoryList, fieldMapping, cycleTimeList,
-				leafNode, rangeList, issueTypesSet);
-		populateExcelDataObject(getRequestTrackerId(), cycleTimeList, excelData);
-		mapTmp.get(leafNode.getId()).setValue(leadTime);
-		// Create kpi level filters
-		IterationKpiFiltersOptions filter1 = new IterationKpiFiltersOptions(SEARCH_BY_ISSUE_TYPE, issueTypesSet);
-		IterationKpiFilters iterationKpiFilters = new IterationKpiFilters(filter1, null);
 
+		Map<String, Object> resultMap = fetchKPIDataFromDb(leafNodeList,
+				DateUtil.getTodayDate().minusMonths(6).toString(), DateUtil.getTodayDate().toString(), kpiRequest);
+
+		leafNodeList.forEach(leafNode -> {
+			List<JiraIssueCustomHistory> issueCustomHistoryList = (List<JiraIssueCustomHistory>) resultMap
+					.get(leafNode.getProjectFilter().getBasicProjectConfigId().toString());
+			FieldMapping fieldMapping = configHelperService.getFieldMappingMap()
+					.get(leafNode.getProjectFilter().getBasicProjectConfigId());
+			issueTypesSet.add(CommonConstant.OVERALL);
+
+			LinkedHashMap<String, List<DataCount>> leadTime = getLeadTime(issueCustomHistoryList, fieldMapping,
+					cycleTimeList, leafNode, rangeList, issueTypesSet);
+			mapTmp.get(leafNode.getId()).setValue(leadTime);
+
+		});
+
+		populateExcelDataObject(getRequestTrackerId(), cycleTimeList, excelData);
 		List<String> xAxisRange = new ArrayList<>(rangeList);
 		Collections.reverse(xAxisRange);
-		kpiElement.setFilters(iterationKpiFilters);
 		kpiElement.setxAxisValues(xAxisRange);
 		kpiElement.setExcelColumns(KPIExcelColumn.LEAD_TIME.getColumns());
 		kpiElement.setExcelData(excelData);
 	}
 
 	@Override
-	public Map<String, Object> fetchKPIDataFromDb(Node leafNode, String startDate, String endDate,
+	public Double calculateKPIMetrics(Map<String, Object> subCategoryMap) {
+		return 0.0d;
+	}
+
+	@Override
+	public Double calculateKpiValue(List<Double> valueList, String kpiName) {
+		return calculateKpiValueForDouble(valueList, kpiName);
+	}
+
+	@Override
+	public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate,
 			KpiRequest kpiRequest) {
 		Map<String, Object> resultListMap = new HashMap<>();
-		Map<String, List<String>> mapOfFilters = new LinkedHashMap<>();
-		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
 
-		List<String> basicProjectConfigIds = new ArrayList<>();
-		ObjectId basicProjectConfigId = leafNode.getProjectFilter().getBasicProjectConfigId();
-		Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
+		leafNodeList.forEach(leafNode -> {
+			Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
+			ObjectId basicProjectConfigId = leafNode.getProjectFilter().getBasicProjectConfigId();
+			Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
 
-		FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
-		basicProjectConfigIds.add(basicProjectConfigId.toString());
-		if (Optional.ofNullable(fieldMapping.getJiraIssueTypeKPI3()).isPresent()) {
-			KpiDataHelper.prepareFieldMappingDefectTypeTransformation(mapOfProjectFilters, fieldMapping.getJiradefecttype(),
-					fieldMapping.getJiraIssueTypeKPI3(), JiraFeatureHistory.STORY_TYPE.getFieldValueInFeature());
+			FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
+			if (Optional.ofNullable(fieldMapping.getJiraIssueTypeKPI3()).isPresent()) {
+				KpiDataHelper.prepareFieldMappingDefectTypeTransformation(mapOfProjectFilters,
+						fieldMapping.getJiradefecttype(), fieldMapping.getJiraIssueTypeKPI3(),
+						JiraFeatureHistory.STORY_TYPE.getFieldValueInFeature());
+				uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
+			}
+			List<String> status = new ArrayList<>();
+			if (Optional.ofNullable(fieldMapping.getJiraLiveStatusKPI3()).isPresent()) {
+				status.addAll(fieldMapping.getJiraLiveStatusKPI3());
+			}
+			mapOfProjectFilters.put("statusUpdationLog.story.changedTo", CommonUtils.convertToPatternList(status));
 			uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
-		}
-		List<String> status = new ArrayList<>();
-		if (Optional.ofNullable(fieldMapping.getJiraLiveStatusKPI3()).isPresent()) {
-			status.addAll(fieldMapping.getJiraLiveStatusKPI3());
-		}
-		mapOfProjectFilters.put("statusUpdationLog.story.changedTo", CommonUtils.convertToPatternList(status));
-		uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfProjectFilters);
+			List<JiraIssueCustomHistory> jiraIssueCustomHistoryList = jiraIssueCustomHistoryRepository
+					.findByBasicProjectConfigIdIn(basicProjectConfigId.toString());
+			List<JiraIssueCustomHistory> filteredProjectHistory = BacklogKpiHelper
+					.filterProjectHistories(jiraIssueCustomHistoryList, uniqueProjectMap, startDate, endDate);
+			resultListMap.put(basicProjectConfigId.toString(), filteredProjectHistory);
 
-		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
-				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
-
-		List<JiraIssueCustomHistory> filteredProjectHistory = BacklogKpiHelper.filterProjectHistories(
-				getJiraIssuesCustomHistoryFromBaseClass(), uniqueProjectMap, startDate, endDate);
-
-		resultListMap.put(STORY_HISTORY_DATA, filteredProjectHistory);
+		});
 		return resultListMap;
 	}
 
@@ -209,20 +212,20 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 	 * prepareLeadtime list
 	 *
 	 * @param jiraIssueCustomHistoriesList
-	 *          historylist
+	 *            historylist
 	 * @param fieldMapping
-	 *          fieldMapping
+	 *            fieldMapping
 	 * @param leadTimeList
-	 *          leadTimeList
+	 *            leadTimeList
 	 * @param node
-	 *          projectNode
+	 *            projectNode
 	 * @param rangeList
-	 *          rangeList
+	 *            rangeList
 	 * @return dataCountMap
 	 */
-	private LinkedHashMap<String, List<DataCount>> getLeadTime(List<JiraIssueCustomHistory> jiraIssueCustomHistoriesList,
-			FieldMapping fieldMapping, List<CycleTimeValidationData> leadTimeList, Node node, List<String> rangeList,
-			Set<String> issueTypesSet) {
+	private LinkedHashMap<String, List<DataCount>> getLeadTime(
+			List<JiraIssueCustomHistory> jiraIssueCustomHistoriesList, FieldMapping fieldMapping,
+			List<CycleTimeValidationData> leadTimeList, Node node, List<String> rangeList, Set<String> issueTypesSet) {
 
 		Map<Long, String> monthRangeMap = new HashMap<>();
 		Map<String, Map<String, List<JiraIssueCustomHistory>>> rangeWiseJiraIssuesMap = new LinkedHashMap<>();
@@ -241,15 +244,16 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 				cycleTimeValidationData.setIntakeDate(jiraIssueCustomHistory.getCreatedDate());
 
 				List<String> liveStatus = fieldMapping.getJiraLiveStatusKPI3().stream().filter(Objects::nonNull)
-						.map(String::toLowerCase).collect(Collectors.toList());
+						.map(String::toLowerCase).toList();
 				jiraIssueCustomHistory.getStatusUpdationLog()
 						.forEach(statusUpdateLog -> BacklogKpiHelper.setLiveTime(cycleTimeValidationData, cycleTime,
-								statusUpdateLog, DateTime.parse(statusUpdateLog.getUpdatedOn().toString()), liveStatus));
+								statusUpdateLog, DateTime.parse(statusUpdateLog.getUpdatedOn().toString()),
+								liveStatus));
 
 				if (BacklogKpiHelper.setRangeWiseJiraIssuesMap(rangeWiseJiraIssuesMap, jiraIssueCustomHistory,
 						cycleTime.getLiveLocalDateTime(), monthRangeMap)) {
-					BacklogKpiHelper.setValueInCycleTime(jiraIssueCustomHistory.getCreatedDate(), cycleTime.getLiveTime(),
-							LEAD_TIME, cycleTimeValidationData, issueTypes);
+					BacklogKpiHelper.setValueInCycleTime(jiraIssueCustomHistory.getCreatedDate(),
+							cycleTime.getLiveTime(), LEAD_TIME, cycleTimeValidationData, issueTypes);
 					issueTypesSet.addAll(issueTypes);
 					leadTimeList.add(cycleTimeValidationData);
 				}
@@ -263,34 +267,36 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 	 * create trendValueMap of DataCounts
 	 *
 	 * @param rangeAndStatusWiseJiraIssueMap
-	 *          map of jira issue by range
+	 *            map of jira issue by range
 	 * @param leadTimeFullList
-	 *          map of flow efficiency by issue
+	 *            map of flow efficiency by issue
 	 * @param leafNode
-	 *          project node
+	 *            project node
 	 * @param totalIssueTypeString
 	 * @return data count map by filter
 	 */
 	private LinkedHashMap<String, List<DataCount>> setDataCountMap(
 			Map<String, Map<String, List<JiraIssueCustomHistory>>> rangeAndStatusWiseJiraIssueMap,
 			List<CycleTimeValidationData> leadTimeFullList, Node leafNode, Set<String> totalIssueTypeString) {
-		Map<String, Long> map = leadTimeFullList.stream().collect(Collectors.toMap(CycleTimeValidationData::getIssueNumber,
-				CycleTimeValidationData::getLeadTime, (existing, replacement) -> existing));
+		Map<String, Long> map = leadTimeFullList.stream()
+				.collect(Collectors.toMap(CycleTimeValidationData::getIssueNumber, CycleTimeValidationData::getLeadTime,
+						(existing, replacement) -> existing));
 		LinkedHashMap<String, List<DataCount>> dataCountMap = new LinkedHashMap<>();
 
 		rangeAndStatusWiseJiraIssueMap.forEach((dateRange, statusWiseJiraIssues) -> {
 			totalIssueTypeString.forEach(issueType -> {
-				List<JiraIssueCustomHistory> typeWiseIssues = statusWiseJiraIssues.getOrDefault(issueType, new ArrayList<>());
+				List<JiraIssueCustomHistory> typeWiseIssues = statusWiseJiraIssues.getOrDefault(issueType,
+						new ArrayList<>());
 				List<Long> leadTimeList = typeWiseIssues.stream().map(JiraIssueCustomHistory::getStoryID)
-						.filter(map::containsKey).map(map::get).collect(Collectors.toList());
+						.filter(map::containsKey).map(map::get).toList();
 
 				setDataCount(leafNode.getProjectFilter().getName(), issueType, dateRange,
 						AggregationUtils.averageLong(leadTimeList), dataCountMap, typeWiseIssues.size());
 			});
-			List<JiraIssueCustomHistory> totalRangeWiseIssues = statusWiseJiraIssues.values().stream().flatMap(List::stream)
-					.collect(Collectors.toList());
+			List<JiraIssueCustomHistory> totalRangeWiseIssues = statusWiseJiraIssues.values().stream()
+					.flatMap(List::stream).toList();
 			List<Long> leadTimeList = totalRangeWiseIssues.stream().map(JiraIssueCustomHistory::getStoryID)
-					.filter(map::containsKey).map(map::get).collect(Collectors.toList());
+					.filter(map::containsKey).map(map::get).toList();
 			setDataCount(leafNode.getProjectFilter().getName(), "Overall", dateRange,
 					AggregationUtils.averageLong(leadTimeList), dataCountMap, totalRangeWiseIssues.size());
 		});
@@ -302,17 +308,17 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 	 * create DataCount by Filter
 	 *
 	 * @param projectName
-	 *          project name
+	 *            project name
 	 * @param filter
-	 *          filter
+	 *            filter
 	 * @param dateRange
-	 *          date range
+	 *            date range
 	 * @param value
-	 *          average flow efficiency
+	 *            average flow efficiency
 	 * @param dataCountMap
-	 *          data count by filter
+	 *            data count by filter
 	 * @param count
-	 *          no of issues for range
+	 *            no of issues for range
 	 */
 	public void setDataCount(String projectName, String filter, String dateRange, Long value,
 			Map<String, List<DataCount>> dataCountMap, int count) {
@@ -333,11 +339,11 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 
 	/**
 	 * @param requestTrackerId
-	 *          requestTrackerId
+	 *            requestTrackerId
 	 * @param leadTimeList
-	 *          leadTimeList
+	 *            leadTimeList
 	 * @param excelData
-	 *          excelData
+	 *            excelData
 	 */
 	private void populateExcelDataObject(String requestTrackerId, List<CycleTimeValidationData> leadTimeList,
 			List<KPIExcelData> excelData) {
@@ -350,4 +356,5 @@ public class LeadTimeServiceImpl extends JiraBacklogKPIService<Long, List<Object
 	public Double calculateThresholdValue(FieldMapping fieldMapping) {
 		return calculateThresholdValue(fieldMapping.getThresholdValueKPI3(), KPICode.LEAD_TIME.getKpiId());
 	}
+
 }
